minor css fix for resolve icon gap on agenda tile and small copy fix

--- a/app/react/components/AgendaItem/index.css
+++ b/app/react/components/AgendaItem/index.css
@@ -109,7 +109,7 @@
   flex: none;
   align-items: center;
   justify-content: flex-start;
-  margin-left: .625rem;
+  margin-left: 2.5rem;
   font-family: Gotham-Medium;
   font-size: 1.438rem;
   cursor: pointer;
